# pkg/server/handler/api/openapi/model_report_work_v1_request.go
@@ -18,7 +18,8 @@ type ReportWorkV1Request struct {
 	// Internal identifier of the unit of work.
 	RunID int32 `json:"runID"`
 
-	TaskResults []ReportWorkV1RequestTaskResultsInner `json:"taskResults"`
+	// List of runs of each task.
+	TaskResults []ReportWorkV1TaskResult `json:"taskResults"`
 }
 
 // AssertReportWorkV1RequestRequired checks if the required fields are not zero-ed
@@ -34,7 +35,7 @@ func AssertReportWorkV1RequestRequired(obj ReportWorkV1Request) error {
 	}
 
 	for _, el := range obj.TaskResults {
-		if err := AssertReportWorkV1RequestTaskResultsInnerRequired(el); err != nil {
+		if err := AssertReportWorkV1TaskResultRequired(el); err != nil {
 			return err
 		}
 	}
@@ -44,7 +45,7 @@ func AssertReportWorkV1RequestRequired(obj ReportWorkV1Request) error {
 // AssertReportWorkV1RequestConstraints checks if the values respects the defined constraints
 func AssertReportWorkV1RequestConstraints(obj ReportWorkV1Request) error {
 	for _, el := range obj.TaskResults {
-		if err := AssertReportWorkV1RequestTaskResultsInnerConstraints(el); err != nil {
+		if err := AssertReportWorkV1TaskResultConstraints(el); err != nil {
 			return err
 		}
 	}
