# pkg/server/handler/api/openapi/model_report_work_v1_task_result.go
@@ -1,0 +1,51 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * saturn-bot server API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ */
+
+package openapi
+
+
+
+
+// ReportWorkV1TaskResult - Result of the run of a task.
+type ReportWorkV1TaskResult struct {
+
+	// Error encountered during the run, if any.
+	Error string `json:"error,omitempty"`
+
+	// Name of the repository.
+	RepositoryName string `json:"repositoryName"`
+
+	// Identifier of the result.
+	Result int32 `json:"result"`
+
+	// Name of the task.
+	TaskName string `json:"taskName"`
+}
+
+// AssertReportWorkV1TaskResultRequired checks if the required fields are not zero-ed
+func AssertReportWorkV1TaskResultRequired(obj ReportWorkV1TaskResult) error {
+	elements := map[string]interface{}{
+		"repositoryName": obj.RepositoryName,
+		"result": obj.Result,
+		"taskName": obj.TaskName,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertReportWorkV1TaskResultConstraints checks if the values respects the defined constraints
+func AssertReportWorkV1TaskResultConstraints(obj ReportWorkV1TaskResult) error {
+	return nil
+}
